Recent Changes: - Fixed home button changing colors - Navbar items alighned to the right - Changed navbar height - Changed image height to fit screen
To Do:
- Banner
  - Add logo
  - Add phrase
- Finish navbar
  - Add new home button - change
- Finish About Me
  - Add small summary
- Finish Project Examples
  - Add image
  - Small description of projects
- Finish Contact Me
  - Add form for quick email
  - Add bar with links to social media
    - Linkedin
    - Facebook
    - Gmail
    - Etc.

--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -1,19 +1,6 @@
-
-
 /* ==========================================================================
-   Author's custom styles
+   Reed's' custom styles
    ========================================================================== */
-
-
-
-
-.navbar-default .navbar-nav > .active{
-    background: url(img/Light Buld Blue.png);
-}
-
-
-
-
 
 
 
