Recent Changes: - Changed navbar home button - Changed banner image, added caption and logo
To Do:
- Banner
  - Add logo
  - Add phrase
- Finish navbar
  - Add new home button - change
- Finish About Me
  - Add small summary
- Finish Project Examples
  - Add image
  - Small description of projects
- Finish Contact Me
  - Add form for quick email
  - Add bar with links to social media
    - Linkedin
    - Facebook
    - Gmail
    - Etc.

--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -2,7 +2,13 @@
    Reed's' custom styles
    ========================================================================== */
 
-
+.text-block {
+    position: absolute;
+    bottom: 30%;
+    right: 40%;
+    color: white;
+    font-size: 50px;
+}
 
 
 
