--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -10,9 +10,52 @@
     font-size: 50px;
 }
 
+.bg-company-red {
+    background-color: #333333;
+}
 
+/* Responsive coursel images */
+.carousel-inner img {
+    width: 50%;
+    margin: auto;
+}
 
+body{
+    width:100%;
+    height:100%;
+    font-family: 'Roboto Condensed', sans-serif;
+	
+}
 
+h1,h2,h3 {
+    margin:0 0 35px 0;
+    font-family: 'Patua One', cursive;
+    text-transform: uppercase;
+    letter-spacing:1px;
+}
+
+p{
+    margin:0 0 25px;
+    font-size:18px;
+    line-height:1.6em;
+}
+a{
+    color:#26a5d3;
+}
+a:hover,a:focus{
+    text-decoration:none;
+    color:#26a5d3;
+}
+
+#contactMe{
+    background:#333333;
+    color:#f4f4f4;
+    padding-bottom:80px;
+}
+
+textarea.form-control{
+    height:100px;
+}
 
 
 
