--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -2,60 +2,91 @@
    Reed's' custom styles
    ========================================================================== */
 
-.text-block {
-    position: absolute;
-    bottom: 30%;
-    right: 40%;
-    color: white;
-    font-size: 50px;
-}
+/*
+Color Scheme:
 
-.bg-company-red {
-    background-color: #333333;
-}
+Black: #0B0C10 
+Navy Blue: #1F2833 
+Grey: #C5C6C7 
+Teal: #66FCF1 
+Dark Teal: #45A29E
+*/
 
-/* Responsive coursel images */
-.carousel-inner img {
-    width: 50%;
-    margin: auto;
-}
 
-body{
-    width:100%;
-    height:100%;
-    font-family: 'Roboto Condensed', sans-serif;
-	
-}
-
-h1,h2,h3 {
-    margin:0 0 35px 0;
-    font-family: 'Patua One', cursive;
-    text-transform: uppercase;
-    letter-spacing:1px;
-}
-
-p{
-    margin:0 0 25px;
-    font-size:18px;
-    line-height:1.6em;
-}
-a{
-    color:#26a5d3;
-}
-a:hover,a:focus{
-    text-decoration:none;
-    color:#26a5d3;
-}
-
-#contactMe{
-    background:#333333;
-    color:#f4f4f4;
-    padding-bottom:80px;
-}
-
+/* Text area for contact me form */
 textarea.form-control{
-    height:100px;
+    height: 200px;
 }
 
+/* Social Media Style */
+ul {
+    padding:0;
+    list-style: none;
+}
+.footer-social-icons {
+    width: 350px;
+    display:block;
+    margin: 0 auto;
+}
+.social-icon {
+    color: #fff;
+}
+ul.social-icons {
+    margin-top: 10px;
+}
+.social-icons li {
+    vertical-align: top;
+    display: inline;
+    height: 100px;
+}
+.social-icons a {
+    color: #fff;
+    text-decoration: none;
+}
+.fa-linkedin {
+    padding:10px 14px;
+    -o-transition:.5s;
+    -ms-transition:.5s;
+    -moz-transition:.5s;
+    -webkit-transition:.5s;
+    transition: .5s;
+    background-color: #0077B5;
+}
+.fa-linkedin:hover {
+    background-color: #565695;
+    color: #66FCF1;
+}
 
+/* Contact form center */
+.form-center{
+    padding-left: 25%;
+    padding-right: 25%;
+}
 
+/* Linkedin positioning */
+.linkedIn-position{
+}
+
+/* Carousel image styling */
+carousel-image{
+    padding:1px;
+    border:1px solid #021a40;
+    padding-top: 3%; 
+    width: 65%; 
+    height: auto; 
+    margin-left: 17%;
+}
+
+/* Styling when screen is 600px or less */
+@media screen and (max-width: 600px) {
+    
+    /* Contact form centering on media */
+    .form-center{
+        padding-left: 10%;
+        padding-right: 10%;
+    }
+    
+    /* Linkedin positioning on media */
+    .linkedIn-position{
+    }
+}
