--- a/css/main.css
+++ b/css/main.css
@@ -12,81 +12,78 @@ Teal: #66FCF1
 Dark Teal: #45A29E
 */
 
-
 /* Text area for contact me form */
-textarea.form-control{
-    height: 200px;
+textarea.form-control {
+  height: 200px;
 }
 
 /* Social Media Style */
 ul {
-    padding:0;
-    list-style: none;
+  padding: 0;
+  list-style: none;
 }
 .footer-social-icons {
-    width: 350px;
-    display:block;
-    margin: 0 auto;
+  width: 350px;
+  display: block;
+  margin: 0 auto;
 }
 .social-icon {
-    color: #fff;
+  color: #fff;
 }
 ul.social-icons {
-    margin-top: 10px;
+  margin-top: 10px;
 }
 .social-icons li {
-    vertical-align: top;
-    display: inline;
-    height: 100px;
+  vertical-align: top;
+  display: inline;
 }
 .social-icons a {
-    color: #fff;
-    text-decoration: none;
+  color: #fff;
+  text-decoration: none;
 }
 .fa-linkedin {
-    padding:10px 14px;
-    -o-transition:.5s;
-    -ms-transition:.5s;
-    -moz-transition:.5s;
-    -webkit-transition:.5s;
-    transition: .5s;
-    background-color: #0077B5;
+  padding: 10px 14px;
+  -o-transition: 0.5s;
+  -ms-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  background-color: #0077b5;
 }
 .fa-linkedin:hover {
-    background-color: #565695;
-    color: #66FCF1;
+  background-color: #565695;
+  color: #66fcf1;
 }
 
 /* Contact form center */
-.form-center{
-    padding-left: 25%;
-    padding-right: 25%;
+.form-center {
+  padding-left: 25%;
+  padding-right: 25%;
 }
 
 /* Linkedin positioning */
-.linkedIn-position{
+.linkedIn-position {
 }
 
 /* Carousel image styling */
-carousel-image{
-    padding:1px;
-    border:1px solid #021a40;
-    padding-top: 3%; 
-    width: 65%; 
-    height: auto; 
-    margin-left: 17%;
+carousel-image {
+  padding: 1px;
+  border: 1px solid #021a40;
+  padding-top: 3%;
+  width: 65%;
+  height: auto;
+  margin-left: 17%;
 }
 
 /* Styling when screen is 600px or less */
 @media screen and (max-width: 600px) {
-    
-    /* Contact form centering on media */
-    .form-center{
-        padding-left: 10%;
-        padding-right: 10%;
-    }
-    
-    /* Linkedin positioning on media */
-    .linkedIn-position{
-    }
+  /* Contact form centering on media */
+  .form-center {
+    padding-left: 10%;
+    padding-right: 10%;
+  }
+
+  /* Linkedin positioning on media */
+  .linkedIn-position {
+  }
 }
