--- a/css/main.css
+++ b/css/main.css
@@ -61,18 +61,18 @@ ul.social-icons {
   padding-right: 25%;
 }
 
-/* Linkedin positioning */
-.linkedIn-position {
+/* Jumbotron */
+.jumbotron {
+  background-image: url(../img/England-Jumbotron.jpg);
 }
 
-/* Carousel image styling */
-carousel-image {
-  padding: 1px;
-  border: 1px solid #021a40;
-  padding-top: 3%;
-  width: 65%;
-  height: auto;
-  margin-left: 17%;
+.layer {
+  background-color: rgba(248, 247, 216, 0.7);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 /* Styling when screen is 600px or less */
