--- a/css/main.css
+++ b/css/main.css
@@ -14,24 +14,91 @@ EMBERS: #B82601
   overflow: hidden;
 }
 
-/* Jumbotron set background image*/
-.banner-background {
-  background-image: url(../img/England-Jumbotron.jpg);
-  background-size: cover;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  overflow: hidden;
+
+/* Navigation bar classes */
+.navbar {
+  background-color: #B82601;
+}
+.logoNavbar {
+  height: 40px;
+  width:50px;
 }
 
-/* Jumbotron overlay */
+
+/* Header image classes*/
+.banner {
+  max-width: 100%; 
+  height: auto;
+}
 .banner-overlay {
-  background-color: rgba(0, 32, 100, 0.4);
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
+  background-color: rgba(0, 32, 100, 0.8);
+}
+
+
+/* Social Media Style */
+ul {
+  padding: 0;
+  list-style: none;
+}
+.footer-social-icons {
+  width: 350px;
+  display: block;
+  margin: 0 auto;
+}
+.social-icon {
+  color: #fff;
+}
+ul.social-icons {
+  margin-top: 10px;
+}
+.social-icons li {
+  vertical-align: top;
+  display: inline;
+}
+.social-icons a {
+  color: #fff;
+  text-decoration: none;
+}
+.fa-linkedin {
+  padding: 10px 14px;
+  -o-transition: 0.5s;
+  -ms-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  background-color: #0077b5;
+}
+.fa-linkedin:hover {
+  background-color: #565695;
+  color: #66fcf1;
+}
+
+
+/* Contact form center */
+.form-center {
+  padding-left: 30%;
+  padding-right: 30%;
+}
+textarea.form-control {
+  height: 200px;
+}
+
+
+/* Styling when screen is 600px or less */
+@media screen and (max-width: 1000px){
+  /* Contact form centering on media */
+  .form-center {
+    padding-left: 25%;
+    padding-right: 25%;
+  }
+}
+
+
+/* Styling when screen is 600px or less */
+@media screen and (max-width: 600px) {
+  /* Contact form centering on media */
+  .form-center {
+    padding-left: 10%;
+    padding-right: 10%;
+  }
 }
